development-runs/307/k8s/validate/resources/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sme-app
  labels:
    io.kompose.service: api
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      labels:
        io.kompose.service: api
        app: api
    spec:
      containers:
        - name: api
          image: ralfx22/sme-api:latest
          ports:
            - containerPort: 3000
              protocol: TCP
