development-runs/307/k8s/validate/resources/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: sme-app
  labels:
    io.kompose.service: quotes
    app: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quotes
  template:
    metadata:
      labels:
        io.kompose.service: quotes
        app: quotes
    spec:
      containers:
        - name: quotes
          image: ralfx22/sme-quotes:latest
          # Container port added based on Compose intent (api expects quotes at port 5000)
          ports:
            - containerPort: 5000
              protocol: TCP
