development-runs/307/k8s/validate/resources/quotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes
  namespace: sme-app
  labels:
    io.kompose.service: quotes
    app: quotes
spec:
  type: ClusterIP
  selector:
    io.kompose.service: quotes
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
